@@ -11,7 +11,9 @@ import com.gregtechceu.gtceu.api.capability.recipe.RecipeCapability;
 import com.gregtechceu.gtceu.api.machine.MetaMachine;
 import com.gregtechceu.gtceu.api.machine.TickableSubscription;
 import com.gregtechceu.gtceu.api.machine.feature.IExplosionMachine;
+import com.gregtechceu.gtceu.api.misc.EnergyContainerList;
 import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.api.recipe.ingredient.EnergyStack;
 import com.gregtechceu.gtceu.config.ConfigHolder;
 import com.gregtechceu.gtceu.utils.GTUtil;
 
@@ -32,7 +34,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
-public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long> implements IEnergyContainer {
+public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<EnergyStack> implements IEnergyContainer {
 
     public static final ManagedFieldHolder MANAGED_FIELD_HOLDER = new ManagedFieldHolder(
             NotifiableEnergyContainer.class, NotifiableRecipeHandlerTrait.MANAGED_FIELD_HOLDER);
@@ -174,7 +176,7 @@ public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long
                 if (energyContainer != null && energyContainer.inputsEnergy(oppositeSide)) {
                     amperesUsed += energyContainer.acceptEnergyFromNetwork(oppositeSide, outputVoltage,
                             outputAmperes - amperesUsed);
-                    if (amperesUsed == outputAmperes) break;
+                    if (amperesUsed >= outputAmperes) break;
                 }
             }
             if (amperesUsed > 0) {
@@ -211,17 +213,17 @@ public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long
     }
 
     private boolean handleElectricItem(IElectricItem electricItem, boolean simulate) {
-        var machineTier = GTUtil.getTierByVoltage(Math.max(getInputVoltage(), getOutputVoltage()));
-        var chargeTier = Math.min(machineTier, electricItem.getTier());
-        var chargePercent = getEnergyStored() / (getEnergyCapacity() * 1.0);
+        int machineTier = GTUtil.getTierByVoltage(Math.max(getInputVoltage(), getOutputVoltage()));
+        int chargeTier = Math.min(machineTier, electricItem.getTier());
+        double chargePercent = (double) getEnergyStored() / (getEnergyCapacity() * 1.0);
 
         // Check if the item is a battery (or similar), and if we can receive some amount of energy
         if (electricItem.canProvideChargeExternally() && getEnergyCanBeInserted() > 0) {
 
-            // Drain from the battery if we are below half energy capacity, and if the tier matches
-            if (chargePercent <= 0.5 && chargeTier == machineTier) {
-                long dischargedBy = electricItem.discharge(getEnergyCanBeInserted(), machineTier, false, true,
-                        simulate);
+            // Drain from the battery if we are below 1/3rd energy capacity, and if the tier matches
+            if (chargePercent <= 0.33 && chargeTier == machineTier) {
+                long dischargedBy = electricItem.discharge(getEnergyCanBeInserted(), machineTier,
+                        false, true, simulate);
                 if (!simulate) {
                     addEnergy(dischargedBy);
                 }
@@ -229,9 +231,9 @@ public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long
             }
         }
 
-        // Else, check if we have above 65% power
-        if (chargePercent > 0.65) {
-            long chargedBy = electricItem.charge(getEnergyStored(), chargeTier, false, simulate);
+        // Else, check if we have above 2/3rds charge
+        if (chargePercent > 0.66) {
+            long chargedBy = electricItem.charge(getEnergyStored(), chargeTier, false, false);
             if (!simulate) {
                 removeEnergy(chargedBy);
             }
@@ -244,7 +246,7 @@ public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long
         int machineTier = GTUtil.getTierByVoltage(Math.max(getInputVoltage(), getOutputVoltage()));
         double chargePercent = getEnergyStored() / (getEnergyCapacity() * 1.0);
 
-        if (chargePercent > 0.65) { // 2/3rds full
+        if (chargePercent > 0.66) { // 2/3rds full
             long chargedBy = FeCompat.insertEu(energyStorage, GTValues.V[machineTier], simulate);
             if (!simulate) {
                 removeEnergy(chargedBy);
@@ -303,28 +305,38 @@ public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long
     }
 
     @Override
-    public List<Long> handleRecipeInner(IO io, GTRecipe recipe, List<Long> left, boolean simulate) {
-        IEnergyContainer capability = this;
-        long sum = left.stream().reduce(0L, Long::sum);
-        if (io == IO.IN) {
-            var canOutput = capability.getEnergyStored();
-            if (!simulate) {
-                capability.addEnergy(-Math.min(canOutput, sum));
+    public List<EnergyStack> handleRecipeInner(IO io, GTRecipe recipe, List<EnergyStack> left, boolean simulate) {
+        for (var it = left.listIterator(); it.hasNext();) {
+            EnergyStack stack = it.next();
+            if (stack.isEmpty()) {
+                it.remove();
+                continue;
             }
-            sum = sum - canOutput;
-        } else if (io == IO.OUT) {
-            long canInput = capability.getEnergyCapacity() - capability.getEnergyStored();
+
+            long totalEU = stack.getTotalEU();
+            long canTransfer = Math.min(totalEU, (io == IO.IN ? this.getEnergyStored() :
+                    this.getEnergyCapacity() - this.getEnergyStored()));
             if (!simulate) {
-                capability.addEnergy(Math.min(canInput, sum));
+                // invert the EU value if we're doing inputs (inputting *to the recipe* -> removing from handlers)
+                this.changeEnergy(io == IO.IN ? -canTransfer : canTransfer);
             }
-            sum = sum - canInput;
+
+            totalEU -= canTransfer;
+            if (totalEU <= 0) {
+                it.remove();
+            } else {
+                it.set(new EnergyStack(totalEU));
+            }
+
         }
-        return sum <= 0 ? null : Collections.singletonList(sum);
+
+        return left.isEmpty() ? null : left;
     }
 
     @Override
     public @NotNull List<Object> getContents() {
-        return List.of(energyStored);
+        long amperage = Math.max(getInputAmperage(), getOutputAmperage());
+        return Collections.singletonList(EnergyContainerList.calculateVoltageAmperage(getEnergyStored(), amperage));
     }
 
     @Override
@@ -333,7 +345,7 @@ public class NotifiableEnergyContainer extends NotifiableRecipeHandlerTrait<Long
     }
 
     @Override
-    public RecipeCapability<Long> getCapability() {
+    public RecipeCapability<EnergyStack> getCapability() {
         return EURecipeCapability.CAP;
     }
 }
